--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Grid</title>
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" href="css/col.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+  <div class="wrapper">
+
+    <ul class="grid-list">
+      <li class="items">item-1</li>
+      <li class="items">item-2</li>  
+      <li class="items">item-3</li>
+      <li class="items">item-4</li>
+      <li class="items">item-5</li>
+      <li class="items">item-6</li>
+      <li class="items">item-7</li>
+      <li class="items">item-8</li>
+      <li class="items">item-9</li>
+      <li class="items">item-10</li>
+      <li class="items">item-11</li>
+
+    </ul>
+
+  </div>
+
 
   <script src="js/main.js"></script>
 </body>
